--- a/src/main/resources/ModTheSpire.config
+++ b/src/main/resources/ModTheSpire.config
@@ -1,4 +1,4 @@
 name=Jaina
 author=Arino
-description=加入了《炉石传说》中的法师——吉安娜·普罗德摩尔 实现了60张卡牌及衍生卡，14种能力、5种伤害类型、4个卡牌标签、14个actions，人物立绘动画和自定义UI基本完成。
-mts_version=0.1.9
+description=加入了《炉石传说》中的法师——吉安娜·普罗德摩尔 实现了75张卡牌及衍生卡，人物立绘动画和自定义UI基本完成。
+mts_version=0.2.0
